--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@reduxjs/toolkit": "^2.2.3",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -25,6 +27,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "eslint-plugin-react": "^7.34.1"
+    
   }
 }
